deploy/aks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: spring-batch-dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: spring-batch-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
